php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #22299 gethostbyname() generate a 'Bus Error'
Submitted: 2003-02-19 09:41 UTC Modified: 2003-02-19 23:37 UTC
From: dams@php.net Assigned:
Status: Closed Package: Network related
PHP Version: 5CVS-2003-02-19 (dev) OS: MacOSX 10.2
Private report: No CVE-ID: None
 [2003-02-19 09:41 UTC] dams@php.net
I encountered this bug on MacOSX, and several version.
MacOSX PHP5 dev (12/02/2003) CLI
MacOSX PHP5 dev (12/02/2003) CGI
MacOSX PHP4.3.0 (built by entropy.ch) Apache module


On those specific web sites, there is a 'Bus error'
and the whole script halts. This bug was encountered
after a long serie of gethostbyname call, and
it was also reproduced alone, just like that : 

<?php
 gethostbyname('www.rabobankgroup.coop');
?>
//www.editors.coop
//www.madisonmarket.coop

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2003-02-19 23:37 UTC] sniper@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Thu Sep 24 19:00:01 2026 UTC