- Fixed bug #22299 (gethostbyname() crash with non-existing domain on MacOSX)